--- a/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/onlineform/view.html
+++ b/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/onlineform/view.html
@@ -99,7 +99,7 @@
             <div class="col-sm-8">
                 <div class="input-group">
                     <input type="text" readonly v-model="formData.${item.fieldName}"
-                           class="form-control" :disabled="disabled"
+                           class="form-control" disabled="disabled"
                            maxlength="${item.length}" title="${item.fromLableTips}" readonly>
                 </div>
             </div>
@@ -113,7 +113,7 @@
             </label>
             <div class="col-sm-8 ">
                 <div class="input-group">
-                    ${dict(item.dictSysCode,item.multipleDict,"END","@change='dictChange("+item.id+",\"formData."+item.fieldName+"\")'","v-model.number=formData."+item.fieldName)}
+                    ${dict(item.dictSysCode,item.multipleDict,"END","@change='dictChange("+item.id+",\"formData."+item.fieldName+"\")'","v-model.number=formData."+item.fieldName,"disabled='disabled'")}
                 </div>
             </div>
         </div>
@@ -130,10 +130,12 @@
                     <input type="text" v-model="formData.${item.fieldName}" class="form-control"
                            d-format="yyyy-MM-dd" d-name="${item.fieldName}" d-type="date"
                            placeholder="请选择日期"
+                           disabled="disabled"
                            readonly title="${item.fromLableTips}">
                     <%}else{%>
                     <input type="text" v-model="formData.${item.fieldName}" class="form-control"
                            d-format="yyyy-MM-dd HH:mm:ss" d-type="datetime" placeholder="请选择日期时间"
+                           disabled="disabled"
                            d-name="${item.fieldName}" readonly title="${item.fromLableTips}">
                     <%}%>
                 </div>
@@ -151,6 +153,7 @@
             <div class="form-group clearfix" style="width: 100%">
                 <div class="col-sm-12" style="min-height: 70px">
                                  <textarea rows="2" v-model="formData.${item.fieldName}" class="form-control"
+                                           disabled="disabled"
                                            title="${item.fromLableTips}"
                                            style="resize: vertical;min-height: 60px"></textarea>
                     <%if(strutil.length(item.fromLableTips)>0){%>
@@ -171,6 +174,7 @@
             <div class="form-group clearfix" style="width: 100%">
                 <div class="col-sm-12" style="min-height: 300px">
                                 <textarea ueditor="true" v-model="formData.${item.fieldName}" id="${item.fieldName}"
+                                          disabled="disabled"
                                           d-name="${item.fieldName}"></textarea>
                     <%if(strutil.length(item.fromLableTips)>0){%>
                     <div class="box-tips">填写提示：${item.fromLableTips}</div>
@@ -188,6 +192,7 @@
             <div class="col-sm-8">
                 <div class="input-group">
                     <input type="password" v-model="formData.${item.fieldName}"
+                           disabled="disabled"
                            title="${item.fromLableTips}" class="form-control">
                 </div>
             </div>
@@ -201,10 +206,10 @@
             </label>
             <div class="col-sm-8">
                 <div class="form-control" style="border: none;">
-                    <div class="layui-btn layui-btn-xs layui-btn-normal"
+            <!--        <div class="layui-btn layui-btn-xs layui-btn-normal"
                          @click="handleAddAttach('${item.fieldName}','${item.controlType}','${item.fieldType}','${item.attachSuffix}','datatable')">
                         添加
-                    </div>
+                    </div>-->
                     <div class="layui-btn layui-btn-xs layui-btn-normal"
                          @click="handleViewAttach('${item.fieldName}')">查看({{
                         (formData.${item.fieldName}+"").fileCount() }})
@@ -221,10 +226,10 @@
             </label>
             <div class="col-sm-8">
                 <div class="form-control" style="border: none;">
-                    <div class="layui-btn layui-btn-xs layui-btn-normal"
+             <!--       <div class="layui-btn layui-btn-xs layui-btn-normal"
                          @click="handleAddAttach('${item.fieldName}','${item.controlType}','${item.fieldType}','${item.attachSuffix}','datatable')">
                         添加
-                    </div>
+                    </div>-->
                     <div class="layui-btn layui-btn-xs layui-btn-normal"
                          @click="handleViewAttach('${item.fieldName}')">查看({{
                         (formData.${item.fieldName}+"").fileCount() }})
@@ -242,7 +247,7 @@
             <div class="col-sm-8">
                 <div class="input-group">
                     <input type="number" v-model.number="formData.${item.fieldName}"
-                           :disabled="disabled"
+                           disabled="disabled"
                            class="form-control" title="${item.fromLableTips}">
                 </div>
             </div>
@@ -256,6 +261,7 @@
             <div class="col-sm-8">
                 <div class="input-group">
                     <input type="text" v-model="formData.${item.fieldName}" class="form-control"
+                           disabled="disabled"
                            maxlength="${item.length}" title="${item.fromLableTips}" readonly>
                 </div>
             </div>
@@ -269,6 +275,7 @@
             <div class="col-sm-8">
                 <div class="input-group">
                     <input type="text" v-model="formData.${item.fieldName}" class="form-control"
+                           disabled="disabled"
                            maxlength="${item.length}" title="${item.fromLableTips}">
                 </div>
             </div>
