feat:增加人员选择、部门选择控件

--- a/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/onlineform/form.html
+++ b/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/onlineform/form.html
@@ -313,7 +313,12 @@
 <script id="formDataScript" type="text/javascript">
     var tableId = "${table.id!}";
     var readonly = "true" == "${data.status=='VIEW'}";
-    var formData = ${data.formDataJson}
+    var formData = {id: '${data.flow.businessId}', userid: "${userid!}",
+    <%for (item in table.fields) {%>
+        /*${item.name}*/
+        ${item.fieldName}:"",
+         <%}%>}
+    ;
 </script>
 <script id="fileBoxTpl" type="text/html">
     <div style="height: 260px;overflow-x:auto">
