--- a/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/general/flowAudit.html
+++ b/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/general/flowAudit.html
@@ -72,15 +72,14 @@ layout("/layouts/blank.html",{title:data.title}){
     <div class="tab-content">
         <div class="tab-pane active" id="formTab" role="tabpanel">
             <div class="box-main" id='formBoxMain'>
-                <!-- 在线表单流程 -->
                 <%if(data.formElementModel.formType=='ONLINE'){%>
-
+                <!-- 在线表单流程 -->
                 <%if(data.status=='EDIT'){%>
-                <%include("/modules/onlineform/form.html",{}){}%>
+                    <%include("/modules/onlineform/form.html",{}){}%>
                 <%}else if(data.status=='AUDIT'){%>
-                <%include("/modules/onlineform/audit.html",{}){}%>
+                    <%include("/modules/onlineform/audit.html",{}){}%>
                 <%}else{%>
-                <%include("/modules/onlineform/view.html",{}){}%>
+                    <%include("/modules/onlineform/view.html",{}){}%>
                 <%}%>
                 <!-- 业务流程 -->
                 <%}else{%>
@@ -109,7 +108,7 @@ layout("/layouts/blank.html",{title:data.title}){
                     {{extensionProperty.replyOpinionName}}：
                 </label>
                 <div class="col-sm-12">
-                    <textarea class="form-control" rows="3" style="resize: none" v-model="flow.comment"/>
+                    <textarea class="form-control" rows="3" style="resize: none" v-model="flow.comment"></textarea>
                 </div>
             </div>
             <%}%>
