--- a/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/model/design.html
+++ b/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/flow/model/design.html
@@ -291,6 +291,8 @@
         type="text/javascript"></script>
 <script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-ordering-controller.js"
         type="text/javascript"></script>
+<script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-process-callactivitysetting-controller.js"
+        type="text/javascript"></script>
 <script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-out-parameters-controller.js"
         type="text/javascript"></script>
 <script src="${base!}/static/flowable-modeler/editor-app/configuration/properties-task-listeners-controller.js"
