--- a/nutzfw-web-admin/src/main/webapp/WEB-INF/view/userchange/index.html
+++ b/nutzfw-web-admin/src/main/webapp/WEB-INF/view/userchange/index.html
@@ -214,7 +214,7 @@ layout("/layouts/blank.html",{title:title}){
         </div>
         <div class="form-group" style="height: 90px;">
             <label><span class="required">*</span>审核意见：</label>
-            <textarea style="width: 470px;height: 90px;resize:none" res type="text" v-model="fromData.reviewOpinion"  class="form-control input-sm">
+            <textarea style="width: 470px;height: 90px;resize:none" type="text" v-model="fromData.reviewOpinion"  class="form-control input-sm">
             </textarea>
         </div>
     </div>
