--- a/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/onlineform/view.html
+++ b/nutzfw-web-flowable/src/main/webapp/WEB-INF/view/modules/onlineform/view.html
@@ -142,23 +142,16 @@
             </div>
         </div>
         <%}else if(item.controlType==2){%>
-        <div class="new-line-box clearfix">
-            <!--多行文本框-->
-            <div class="form-group clearfix">
-                <label class="col-sm-4 control-label">
-                    <span class="required" v-if="!${item.nullValue}">*</span>
-                    ${item.fromLable}：
-                </label>
-            </div>
-            <div class="form-group clearfix" style="width: 100%">
-                <div class="col-sm-12" style="min-height: 70px">
-                                 <textarea rows="2" v-model="formData.${item.fieldName}" class="form-control"
-                                           disabled="disabled"
-                                           title="${item.fromLableTips}"
-                                           style="resize: vertical;min-height: 60px"></textarea>
-                    <%if(strutil.length(item.fromLableTips)>0){%>
-                    <div class="box-tips">填写提示：${item.fromLableTips}</div>
-                    <%}%>
+        <div class="form-group clearfix">
+            <label class="col-sm-4 control-label">
+                <span class="required" v-if="!${item.nullValue}">*</span>
+                ${item.fromLable}：
+            </label>
+            <div class="col-sm-8">
+                <div class="input-group">
+                    <textarea  v-model="formData.${item.fieldName}" class="form-control" style="resize: vertical;"
+                               disabled="disabled"
+                               maxlength="${item.length}" title="${item.fromLableTips}"></textarea>
                 </div>
             </div>
         </div>
